# hisaab

./: .gitignore  LICENSE  README.md
backend/: .dockerignore  Dockerfile  alembic.ini  package-lock.json  package.json  pyproject.toml  serverless.yml
backend/alembic/: env.py
backend/app/: main.py
backend/app/api/: api.py
backend/app/core/: config.py
backend/app/db/: database.py  models.py
frontend/: index.html  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.jsx  index.css  store.js
frontend/src/components/: Account.jsx  Activity.jsx  ActivityList.jsx  AmountInputModal.jsx  Body.jsx  Cards.jsx  ConfirmationModal.jsx  CurrencyAmount.jsx  CustomSplitModal.jsx  DeleteExpenseModal.jsx  EditExpenseModal.jsx  ExpenseAdd.jsx  ExpenseDescription.jsx  ExpenseDetail.jsx  ExpenseList.jsx  ExpensePayerSelect.jsx  ExpenseSplit.jsx  ExpenseSplitOptions.jsx  Footer.jsx  FriendAddModal.jsx  FriendSelect.jsx  Friends.jsx  GroupAddModal.jsx  GroupDeleteModal.jsx  GroupDetail.jsx  GroupIcon.jsx  GroupList.jsx  GroupParticipantsModal.jsx  GroupSelectDropdown.jsx  Groups.jsx  Header.jsx  Loader.jsx  ModalButtons.jsx  ParticipantsSelect.jsx  Self.jsx  SelfEditExpenseModal.jsx  SelfExpenseDetail.jsx  SettleUpModal.jsx  Snackbar.jsx  SplitTypeDropdown.jsx  (+8 more)
frontend/src/components/ui/: amount-display.jsx  avatar.jsx  badge.jsx  button.jsx  card.jsx  dialog.jsx  empty-state.jsx  floating-action-button.jsx  glass-card.jsx  input.jsx  status-badge.jsx
frontend/src/services/: ExpenseService.js  FriendService.js  UserService.js
